# qaintum-ai

./: .gitignore  CONTRIBUTING.md  README.md
qe-container/: Dockerfile  pyproject.toml  setup.cfg
qe-container/qaintum_qe/: __init__.py  requirements.txt
qe-container/qaintum_qe/layers/: __init__.py  input_embedding.py  quantum_feed_forward.py  scaled_dot_product.py
qe-container/qaintum_qe/models/: __init__.py  quantum_encoder.py
qe-container/qaintum_qe/utils/: __init__.py  qff_config.py
qe-container/tests/: __init__.py  test_device_utils.py  test_input_embedding.py  test_multi_headed_attention.py  test_qff_config.py  test_quantum_encoder.py  test_quantum_feed_forward.py  test_scaled_dot_product.py
qnn-container/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
qnn-container/docs/: api_reference.md  quantum_neural_network_overview.md  user_guide.md
qnn-container/qaintum_qnn/: __init__.py
qnn-container/qaintum_qnn/docs/: api_reference.md  user_guide.md
qnn-container/qaintum_qnn/layers/: __init__.py  qnn_circuit.py  qnn_data_encoder.py  qnn_layer.py
qnn-container/qaintum_qnn/models/: quantum_neural_network.py
qnn-container/qaintum_qnn/utils/: __init__.py  normalization.py  qnn_weight_init.py
qnn-container/qnn/: __init__.py  pyproject.toml  setup.cfg  setup.py
qnn-container/qnn/layers/: __init__.py  qnn_circuit.py  qnn_data_encoder.py  qnn_layer.py
qnn-container/qnn/models/: __init__.py  quantum_neural_network.py
qnn-container/qnn/utils/: normalization.py  qnn_weight_init.py
qnn-container/qnn_examples/: advanced_features.py  basic_usage.py
qnn-container/qnn_examples/bio_oil_projection/: __init__.py  custom_encoder.py  train.py
qnn-container/qnn_examples/cancer_diagnosis/: data_processing.py  model_builder.py  normalization.py  train.py  training_utils.py  visualization.py
qnn-container/qnn_examples/cancer_diagnosis/data/: OrData.npz
qnn-container/tests/: __init__.py  test_advanced_features.py  test_basic_usage.py  test_normalization.py  test_qnn_circuit.py  test_qnn_data_encoder.py  test_qnn_layer.py  test_qnn_weight_init.py  test_quantum_neural_network.py
qt-container/: pyproject.toml  setup.cfg
qt-container/docs/: api_reference.md  user_guide.md
qt-container/qaintum_qt/: __init__.py
qt-container/qaintum_qt/layers/: __init__.py  input_embedding.py  multi_headed_attention.py  quantum_feed_forward.py
qt-container/qaintum_qt/models/: __init__.py  quantum_decoder.py  quantum_encoder.py  quantum_transformer.py
qt-container/qaintum_qt/utils/: device.py  qff_config.py
qt-container/qt/: __init__.py  requirements.txt
qt-container/qt/layers/: __init__.py  multi_headed_attention.py
qt-container/qt/models/: __init__.py  quantum_decoder.py  quantum_encoder.py  quantum_feed_forward.py  quantum_transformer.py
qt-container/qt/utils/: device.py
qt-container/tests/: test_input_embedding.py  test_multi_headed_attention.py  test_qff_config.py  test_quantum_decoder.py  test_quantum_encoder.py  test_quantum_feed_forward.py  test_quantum_transformer.py  test_scaled_dot_product.py
