[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qaintum_qt"
version = "0.1.0"
description = "Quantum Transformer (QT) framework for quantum-enhanced sequence learning."
authors = [
    {name = "Sophie Choe", email = "sophie.choe@qaintum.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "qaintum-qnn>=0.1.0",
    "numpy==1.23.5",
    "pandas==2.2.2",
    "matplotlib",
    "PennyLane==0.29.1",
    "PennyLane-SF==0.29.1",
    "scikit-learn",
    "scipy==1.10.1",
    "setuptools==65.5.0",
    "torch==2.2.2",
    "torchvision==0.17.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "pre-commit"
]

[tool.setuptools]
packages = ["qaintum_qt"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
ignore_missing_imports = true
