[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qnn"
version = "0.1.0"
description = "Quantum Neural Networks (QNN) framework for quantum-enhanced machine learning."
authors = [
    {name = "Sophie Choe", email = "sophie.choe@qaintum.ai"},
    {name = "Alex Olivas", email = ""},
    {name = "Max Ivry", email = ""},
    {name = "B R Nikilesh", email = ""},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "PennyLane==0.29.1",
    "PennyLane-SF==0.29.1",
    "numpy==1.23.5",
    "scipy==1.10.1",
    "sympy>=1.10",
    "setuptools==65.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "pre-commit"
]

[tool.setuptools]
packages = ["qnn"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",  # Suppress all DeprecationWarnings
]