[metadata]
name = qaintum-qnn
version = 0.1.1dev1
author = Sophie Choe, Alex Olivas, Max Ivry, B R Nikilesh
author_email = sophie.choe@qaintum.ai
description = Quantum Neural Network (QNN) framework for quantum-enhanced AI models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qaintumai/qaintum-ai/qnn-container
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    qnn>=0.1.0
    numpy==1.23.5
    pandas==2.2.2
    PennyLane==0.29.1
    PennyLane-SF==0.29.1
    scikit_learn
    scipy==1.10.1
    setuptools==65.5.0
    torch==2.2.2
    torchvision==0.17.2

[options.extras_require]
dev =
    pytest
    black
    flake8
    mypy
    pre-commit

[options.package_data]
qnn = py.typed

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist

[mypy]
ignore_missing_imports = True

[tool.pytest.ini_options]
testpaths = tests
addopts = --verbose --cov=qnn --cov-report=term-missing